@@ -157,6 +157,15 @@ $addColumnArray = Array(
 			'default' => '0'
 		)
 	),
+	'terms_acknowledged' => Array (
+		'exclude' => 0,
+		'label' => 'LLL:EXT:sr_feuser_register/locallang_db.xml:fe_users.terms_acknowledged',
+		'config' => Array (
+			'type' => 'check',
+			'default' => '0',
+			'readOnly' => '1',
+		)
+	),
 );
 
 $typoVersion = t3lib_div::int_from_ver(TYPO3_version);
@@ -202,13 +211,13 @@ if (strpos($TCA['fe_users']['feInterface']['fe_admin_fieldList'],'first_name') =
 }
 
 $TCA['fe_users']['feInterface']['fe_admin_fieldList'] = str_replace(',title', ',gender,' . $additionalFields . 'cnum,status,title', $TCA['fe_users']['feInterface']['fe_admin_fieldList']);
-$TCA['fe_users']['feInterface']['fe_admin_fieldList'] .= ',image,disable,date_of_birth,by_invitation';
+$TCA['fe_users']['feInterface']['fe_admin_fieldList'] .= ',image,disable,date_of_birth,by_invitation,terms_acknowledged';
 
 $TCA['fe_users']['types']['0']['showitem'] = str_replace(', country', ', zone, static_info_country, country,language', $TCA['fe_users']['types']['0']['showitem']);
 
 $TCA['fe_users']['types']['0']['showitem'] = str_replace(', address', ', status, date_of_birth, address', $TCA['fe_users']['types']['0']['showitem']);
 
-$TCA['fe_users']['types']['0']['showitem'] = str_replace(', www', ', www, comments, by_invitation', $TCA['fe_users']['types']['0']['showitem']);
+$TCA['fe_users']['types']['0']['showitem'] = str_replace(', www', ', www, comments, by_invitation, ,terms_acknowledged', $TCA['fe_users']['types']['0']['showitem']);
 
 $lastPalette = 0;
 for ($i=0; $i<10; $i++)	{
