@@ -122,7 +122,7 @@ class tx_srfeuserregister_marker {
 
 		$this->setButtonLabelsList($buttonLabelsList);
 
-		$otherLabelsList = 'yes,no,password_again,tooltip_password_again,tooltip_invitation_password_again,click_here_to_register,tooltip_click_here_to_register,click_here_to_edit,tooltip_click_here_to_edit,click_here_to_delete,tooltip_click_here_to_delete'.
+		$otherLabelsList = 'yes,no,password_again,tooltip_password_again,tooltip_invitation_password_again,click_here_to_register,tooltip_click_here_to_register,click_here_to_edit,tooltip_click_here_to_edit,click_here_to_delete,tooltip_click_here_to_delete,click_here_to_see_terms,tooltip_click_here_to_see_terms'.
 		',copy_paste_link,enter_account_info,enter_invitation_account_info,required_info_notice,excuse_us,'.
 			',tooltip_login_username,tooltip_login_password,'.
 			',registration_problem,registration_sorry,registration_clicked_twice,registration_help,kind_regards,kind_regards_cre,kind_regards_del,kind_regards_ini,kind_regards_inv,kind_regards_upd'.
@@ -371,7 +371,14 @@ class tx_srfeuserregister_marker {
 			if (in_array(trim($theField), $requiredArray)) {
 
 				$markerArray['###REQUIRED_'.$markerkey.'###'] = $this->cObj->cObjGetSingle($this->conf['displayRequired'],$this->conf['displayRequired.'],$this->pibase->extKey); // default: '<span>*</span>';
-				$markerArray['###MISSING_'.$markerkey.'###'] = $this->langObj->getLL('missing_'.$theField);
+				$key = 'missing_' . $theField;
+				$label = $this->langObj->getLL($key);
+				if ($label == '') {
+					$label = $this->langObj->getLL('internal_no_text_found');
+					$label = sprintf($label, $key);
+				}
+				$markerArray['###MISSING_'.$markerkey.'###'] = $label;
+
 				$markerArray['###MISSING_INVITATION_'.$markerkey.'###'] = $this->langObj->getLL('missing_invitation_'.$theField);
 			} else {
 				$markerArray['###REQUIRED_'.$markerkey.'###'] = '';
@@ -530,6 +537,10 @@ class tx_srfeuserregister_marker {
 		$markerArray['###SITE_URL###'] = $this->controlData->getSiteUrl();
 		$markerArray['###SITE_WWW###'] = t3lib_div::getIndpEnv('TYPO3_HOST_ONLY');
 		$markerArray['###SITE_EMAIL###'] = $this->conf['email.']['from'];
+
+		$file = ($this->conf['terms.']['file'] ? $GLOBALS['TSFE']->tmpl->getFileName($this->conf['terms.']['file']) : '');
+		$markerArray['###TERMS_URL###'] = $file;
+
 		return $markerArray;
 	}	// generateURLMarkers
 
