@@ -1,3 +1,7 @@
+2011-10-04 Franz Holzinger  <franz@ttproducts.de>
+	* new feature: add the field terms_acknowledged and a PDF file with the terms
+	* use the text of internal_no_text_found if no error text could be found
+
 2011-09-08 Franz Holzinger  <franz@ttproducts.de>
 	* issue #29523 (forge): improve the hook for the validation to use the error message generator
 
